updated unit tests